# TestGen-AI

./: .env.example  .gitignore  CLASS_STRUCTURE_EXTRACTION.md  CLAUDE_SETUP.md  CLI_HELP_VERIFICATION.md  ENHANCED_EXTRACTION.md  GEMINI_SETUP.md  GETTING_STARTED.md  HOW_TO_TEST_FILE_WRITER.md  LLM_API_SETUP.md  LLM_PROVIDERS_GUIDE.md  MULTI_LANGUAGE_SUPPORT.md  PROGRESS.md  QUICK_START_API.md  README.md  TASKS.md  TASKS_33_34_COMPLETE.md  TestGen AI.md  TestGen AI.txt  UPDATE_ENV.md  check_pro_models.py  demo_file_writer.py  demo_test_generation.py  list_gemini_models.py  llm_context_output.txt  output.txt  pyproject.toml  test_14_languages_complete.py  test_context_reduction.py  test_fixtures.py  test_full_multi_language.py  test_gemini_final.py  test_llm_connection.py  test_llm_context.py  test_multi_language.py  test_prompts.py  test_pydantic_models.py  test_simple_writer.py  test_task_36_demo.py  test_task_37.py  (+19 more)
demo_output/tests/: test_calculator.py  test_utils.py
demo_output/tests/core/: test_api.py
docs/: 14_LANGUAGES_COMPLETE.md  14_LANGUAGES_SUPPORTED.md  CLEANUP_2025-12-19.md  MULTI_LANGUAGE_COMPLETE.md  MULTI_LANGUAGE_RUNNER.md  MULTI_LANGUAGE_STATUS.md  TASK_50_COMPLETE.md  TASK_51_COMPLETE.md
planning/: PROGRESS.md  TASKS.md
samples/go/: sample_test.go
samples/java/: SampleTest.java
samples/javascript/: sample.test.js
samples/python/: test_sample_suite.py
src/testgen/: __init__.py  config.py  main.py
src/testgen/core/: __init__.py  base_runner.py  cache.py  code_sanitizer.py  cpp_runner.py  csharp_runner.py  css_runner.py  failure_analyzer.py  file_writer.py  go_runner.py  html_runner.py  java_runner.py  javascript_runner.py  kotlin_runner.py  language_config.py  language_detector.py  llm.py  mock_llm.py  performance_monitor.py  php_runner.py  prompt_builder.py  prompt_generator.py  prompt_templates.py  python_runner.py  response_validator.py  result_aggregator.py  result_models.py  result_parser.py  ruby_runner.py  runner_factory.py  rust_runner.py  scanner.py  swift_runner.py  test_detector.py  test_executor.py  test_generator.py  test_merger.py  token_counter.py  (+1 more)
src/testgen_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_runners_universal.py  test_scanner.py
tests/fixtures/: README.md
(+11 files in other folders)
